# RLdC_AiNalyzator

./: .dockerignore  .env  .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  BACKTESTING_README.md  BLOG_ENGINE_README.md  CHANGELOG_LIVE.md  COMPLETION_REPORT.md  CONFIG_AUDIT.md  CURRENT_STATE.md  Dockerfile  ENDPOINTS_AUDIT.md  FRONTEND_VIEW_MAP.md  HANDOFF_FOR_EXTERNAL_REVIEW.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INTERFACE_DEMO.md  KNOWN_ISSUES_AND_GAPS.md  LIVE_TRADING_FLOW.md  MASTER_INDEX.md  OPEN_GAPS.md  PROGRAM_REVIEW.md  PROJECT_AUDIT_MASTER.md  PROJECT_EXPORT_MAP.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  STRATEGY_RULES.md  TASK_QUEUE.md  TELEGRAM_COMMANDS.md  TELEGRAM_FORMATTER_AUDIT.md  TRADING_GOAL.md  TRADING_METRICS_SPEC.md  USAGE.md  _codeql_detected_source_root  demo.py  demo_blog_engine.py  demo_bot.py  (+24 more)
.github/: copilot-instructions.md
ai_trading/: README.md  __init__.py  data_loader.py  mock_data.py  requirements.txt  trading_env.py  train.py
backend/: accounting.py  ai_orchestrator.py  analysis.py  app.py  auth.py  binance_client.py  candidate_validation.py  collector.py  correlation.py  database.py  experiments.py  expert_audit_engine.py  governance.py  market_scanner.py  notification_hooks.py  operator_console.py  policy_layer.py  portfolio_engine.py  portfolio_reconcile.py  post_promotion_monitoring.py  post_rollback_monitoring.py  promotion_flow.py  public_url.py  queue_guard.py  risk.py  (+16 more)
hft_engine/: CMakeLists.txt  README.md
hft_engine/include/: order_book.h
hft_engine/src/: main.cpp  order_book.cpp
(+196 files in other folders)
